Improved Data Generator